--- a/src/components/resultBlock/resultBlock.module.scss
+++ b/src/components/resultBlock/resultBlock.module.scss
@@ -1,6 +1,11 @@
+.resultsBlockItemBlock{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .resultsBlockItem {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   margin: 10px;
   padding: 10px;
   border: 3px #e1c289 solid;
@@ -14,10 +19,28 @@
   font-size: 150%;
   transition: 0.1s ease-out;
   text-align: center;
+  overflow: hidden;
+  position: relative;
 }
 
 .resultsBlockItem:hover {
-  transform: scale(1.1);
+  transform: scale(1.04);
+}
+.close{
+  width: 24px;
+  height: 24px;
+  margin-left: auto;
+  border-radius: 100px;
+  transition: 0.2s ease-out;
+  background:
+          linear-gradient(45deg, transparent calc(50% - 3px), #e1c289 calc(50% - 3px), #e1c289 calc(50% + 3px), transparent calc(50% + 3px)),
+          linear-gradient(-45deg, transparent calc(50% - 3px), #e1c289 calc(50% - 3px), #e1c289 calc(50% + 3px), transparent calc(50% + 3px));
+}
+.close:hover {
+  transform: scale(0.95);
+}
+.close:active {
+  transform: scale(0.8);
 }
 @keyframes resultsBlockAnimation {
   0%{
