--- a/src/components/app/app.module.css
+++ b/src/components/app/app.module.css
@@ -35,7 +35,6 @@ h1:hover {
   padding: 5px;
   height: 30px;
   transition: 0.2s ease-out;
-  margin-right: 2px;
   color: #e1c289;
   font-size: 130%;
   text-align: center;
@@ -60,6 +59,11 @@ h1:hover {
   padding: 5px;
   color: #e1c289;
   transition: 0.2s ease-out;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
+  margin-left: 3px;
 }
 
 .buttonClass:hover {
