--- a/src/components/resultBlock/resultBlock.module.scss
+++ b/src/components/resultBlock/resultBlock.module.scss
@@ -90,6 +90,11 @@
   background: url("../assets/pencil.svg") no-repeat center;
   background-size: 25px;
 }
+.pencilCompleted {
+  width: 50px ;
+  height: 50px ;
+  background-size: 25px;
+}
 .pencil:hover {
   transform: scale(0.95);
 }
@@ -108,7 +113,18 @@
 .checkMark:active {
   transform: scale(0.8);
 }
-
+.inputClass {
+  background-color: #00755c;
+  border: 2px #e1c289 solid;
+  border-radius: 5px;
+  width: 250px;
+  padding: 5px;
+  height: 30px;
+  transition: 0.2s ease-out;
+  color: #e1c289;
+  font-size: 130%;
+  text-align: center;
+}
 @keyframes resultsBlockAnimation {
   0%{
     transform: translate(-1000px, 0px);
