--- a/src/components/app/app.module.scss
+++ b/src/components/app/app.module.scss
@@ -19,6 +19,7 @@ h1 {
   letter-spacing: 3px;
   -webkit-text-stroke: 1px #e1c289;
   z-index: 5;
+  user-select: none;
 }
 h1:hover {
   letter-spacing: 5px;
@@ -40,6 +41,7 @@ h1:hover {
   color: #e1c289;
   font-size: 110%;
   text-align: center;
+  user-select: none;
 }
 .inputClass:hover {
   transform: scale(0.98);
